--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,47 @@
-<p>
-  home works!
-</p>
+<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+  <ol class="carousel-indicators">
+    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+  </ol>
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img class="d-block w-100" src="assets/img/ed-sheeran.jpg" alt="First slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/img/metallica.jpg" alt="Second slide">
+    </div>
+    <div class="carousel-item">
+      <img class="d-block w-100" src="assets/img/heroes.jpg" alt="Third slide">
+    </div>
+  </div>
+  <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
+</div>
+
+<div class="container top-30">
+  <div class="row">
+
+    <div class="col-md-4 text-center">
+      <img src="assets/img/artist.png" alt="">
+      <hr>
+      Lorem ipsum dolor sit amet.
+    </div>
+    <div class="col-md-4 text-center">
+      <img src="assets/img/music.png" alt="">
+      <hr>Lorem ipsum dolor sit amet.
+    </div>
+    <div class="col-md-4 text-center">
+      <img src="assets/img/album.png" alt="">
+      <hr>
+      Lorem ipsum dolor sit amet.
+    </div>
+
+  </div>
+</div>
