--- a/src/styles.css
+++ b/src/styles.css
@@ -15,7 +15,7 @@ hr{
 .puntero{
   cursor: pointer;
 }
-
+/*
 .carousel-item{
   width: 100%;
   height: 500px;
@@ -23,13 +23,13 @@ hr{
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-}
+}*/
 
-@media (max-width: 600px) {
+/*@media (max-width: 600px) {
   .carousel-item {
     height: 280px;
   }
-}
+}*/
 
 
 .main-container{
@@ -68,4 +68,8 @@ hr{
 
 .fadeIn {
   animation-name: fadeIn;
+}
+
+.top-30{
+  margin-top: 30px;
 }
